--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "react-syntax-highlighter": "^15.6.1",
     "redux-thunk": "^3.1.0",
     "tailwind-merge": "^3.2.0"
   },
