--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ cachetools==5.5.2
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
+cloudinary==1.41.0
 colorama==0.4.6
 dataclasses-json==0.6.7
 fastapi==0.115.12
@@ -18,6 +19,7 @@ google-api-core==2.24.2
 google-api-python-client==2.169.0
 google-auth==2.40.1
 google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
 greenlet==3.2.1
 grpcio==1.71.0
@@ -67,6 +69,7 @@ qdrant-client==1.14.2
 requests==2.32.3
 requests-toolbelt==1.0.0
 rsa==4.9.1
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 starlette==0.46.2
@@ -80,4 +83,3 @@ urllib3==2.4.0
 uvicorn==0.34.2
 yarl==1.20.0
 zstandard==0.23.0
-cloudinary==1.41.0
