--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -63,7 +63,7 @@ pypdf==5.4.0
 PyPDF2==3.0.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
-pywin32==310
+pywin32
 PyYAML==6.0.2
 qdrant-client==1.14.2
 requests==2.32.3
